--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -2,6 +2,8 @@
 
 <% form_for(@site) do |f| %>
   <%= f.error_messages %>
+  
+  <p><label>Name:</label><%= f.text_field 'name' %></p>
 
   <p>
     <%= f.submit "Create" %>
