UI cleanup - not pretty, but more useable

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -6,6 +6,7 @@
 
 <% for site in @sites %>
   <tr>
+    <td><%= h site.name %></td>
     <td><%= link_to 'Show', site %></td>
     <td><%= link_to 'Edit', edit_site_path(site) %></td>
     <td><%= link_to 'Destroy', site, :confirm => 'Are you sure?', :method => :delete %></td>
