--- a/app/views/comments/_new.rhtml
+++ b/app/views/comments/_new.rhtml
@@ -1,4 +1,4 @@
-<% form_for :comment do |form| %>
+<% form_for :comment, :url => url_for(:only_path => false) do |form| %>
     Add a comment: <br/>
     <p><%= form.text_area :text %></p>
     <p>Your name: <%= form.text_field :nickname %></p>
